--- a/admin.html
+++ b/admin.html
@@ -12,9 +12,9 @@
 
       <div id="user-responses"></div>
 
-      <button onclick="goToHomePage()">Retour à l'accueil</button>
+      <button id="back-button">Retour à l'accueil</button>
     </div>
 
-    <script src="admin-script.js"></script>
+    <script type="module" src="admin-script.js"></script>
   </body>
 </html>
