--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div class="overlay">
         <h1 class="header-title">Souvenirs de Corée du Sud</h1>
         <p class="header-subtitle">
-          한국 친구들만 접속할 수 있습니다. 제가 가르쳐 준 단어(영어로 쓰기)로
-          로그인하세요
+          이 메시지를 읽을 수 있는 사람만 로그인할 수 있습니다. 아이디와
+          비밀번호를 찾아보세요! (비밀번호 힌트: 제가 배운 단어나 우리가 자주
+          사용하는 단어 중 하나입니다)
         </p>
         <div class="button-container">
           <button onclick="window.location.href='login.html'">로그인</button>
