--- a/login.html
+++ b/login.html
@@ -12,7 +12,13 @@
 
       <form id="login-form">
         <input type="text" id="userId" placeholder="ID" required />
-        <input type="password" id="password" placeholder="비밀번호" required lang="ko" inputmode="text" />
+        <input
+          type="password"
+          id="password"
+          placeholder="비밀번호"
+          required
+          lang="ko"
+        />
         <button type="submit">로그인</button>
         <p id="error-message" style="color: red"></p>
       </form>
