--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
       <form id="login-form">
         <input type="text" id="userId" placeholder="ID" required />
         <input
-          type="password"
+          type="text"
           id="password"
           placeholder="비밀번호"
           required
